fix(infotip): fix text wrapping and alignment (#2831)
Fix the text wrapping of "About OpenShift.io" and adjust alignment of the infotip caret.

--- a/src/app/layout/header/header.component.less
+++ b/src/app/layout/header/header.component.less
@@ -62,6 +62,11 @@
     &.bottom-right {
       .arrow { left: 88%; }
     }
+    .list-group {
+      &-item {
+        margin: 0 15px;
+      }
+    }
   }
   .navbar-primary {
     > .active > a {
@@ -165,7 +170,7 @@
     &:before { color: @color-pf-white; }
   }
   .infotip {
-    right: -15px;
+    right: -8px;
   }
   &-status {
     margin-right: 5px;
